--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -77,6 +77,10 @@
   padding-top: 10px;
 }
 
+.itemlist {
+  margin-left: 30px;
+}
+
 #page-content-wrapper {
   min-width: 100vw;
   overflow: hidden;
@@ -294,17 +298,18 @@ ul.nav:hover {
 
 a.sel2.activo {
   background-color: transparent;
-  color: #c4e3eb ;
+  color: #358da3;
 }
 
 a.sel2.activo::before {
   content: " "; 
   position: absolute;
-  left: 10px;
-  width: 0.7rem;
-  height: 0.7rem;
+  margin-top: 2.5px;
+  left: 30px;
+  width: 0.9rem;
+  height: 0.9rem;
   border-radius: 50%;
-  background: #ff5757;
+  background: #358da3;
 }
 
 
