Filtros por modal vista informes

--- a/src/app/components/informes/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informes/informe-categoria/informe-categoria.component.html
@@ -106,7 +106,7 @@
     <tbody>
       <tr *ngFor="let e of photos">
         <td data-label="Categoría"> {{e.categoria}} </td>
-        <td data-label="Subcategoría"> {{e.x}} </td>
+        <td data-label="Subcategoría"> {{e.subCategoria}} </td>
         <td data-label="Tipo de prenda"> {{e.imageName}} </td>
         <td data-label="SKU"> {{e.x}} </td>
         <td data-label="Precio promedio"> {{e.x}} </td>
