--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -40,6 +40,12 @@
   font-size: 16px !important;
 }
 
+.menu-color,
+.prendaGen {
+  color: #212121;
+  font-weight: bold;
+}
+
 .material-icons{
   font-size: 30px;
 }
