se organiza componente informe-categoria

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -43,7 +43,7 @@
             </a>
             <ul class="collapse list-unstyled firstitem itemlist" id="colectionSubmenu">
               <li class="list-items-container">
-                <a routerLink="informeCategoria" routerLinkActive="activo" class="sel2">X</a>
+                <a routerLink="/informeCategoria" class="sel2">X</a>
               </li>
             </ul>
           </li>
