--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -11,6 +11,35 @@
   margin: auto;
 }
 
+.menu-color,
+.prendaGen {
+  color: #212121;
+  font-weight: bold;
+}
+
+.filtersCharts {
+  display: flex;
+  width: 100%;
+}
+
+.selectCharts {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: -8px;
+}
+
+.filterTable {
+  display: flex;
+  width: auto;
+}
+
+.filterSvgTable {
+  margin-left: 20px;
+  margin-top: -10px;
+}
+
+
+
 tr:hover td {
   background-color:#358da3;
   color: white;
