--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -1,12 +1,145 @@
 <div class="grid">
   <div class="chart-container">
     <div class="titulo-chart">
-      <h2>Precio promedio marcas</h2>
-      <select class="form-control col-md-2" [(ngModel)]="seleccion" >
-        <option *ngFor="let seleccion of yearMonth" (value)="seleccion">
-          {{seleccion}}
-        </option>
-      </select>
+      <div class="filtersCharts mb-2">
+        <h2>Precio promedio marcas</h2>
+
+        <select class="form-control col-md-2 selectCharts" [(ngModel)]="seleccion">
+          <option *ngFor="let seleccion of yearMonth" (value)="seleccion">
+            {{seleccion}}
+          </option>
+        </select>
+
+        <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
+          xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+          viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+          aria-label="Illustration of a Funnel" class="filterSvg">
+          <g id="__id33_ssutzzo1g">
+            <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+              style="fill: inherit"></path>
+          </g>
+        </svg>
+        <br>
+        <ng-template #template>
+          <div class="modal-header">
+            <h4 class="modal-title pull-left">Filtros</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <ul class="list-unstyled components">
+
+              <li class="active">
+                <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Marca
+                </a>
+                <ul class="collapse list-unstyled" id="filterMArk">
+                  <li>
+                    <label class="control control--checkbox">
+                      Zara
+                      <input type="checkbox" class="ml-2 check" />
+                    </label>
+                  </li>
+                  <li>
+                    <label class="control control--checkbox">
+                      Mango
+                      <input type="checkbox" class="ml-2 check" />
+                    </label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Categoria
+                </a>
+                <ul class="collapse list-unstyled" id="filterCategory">
+                  <li>
+                    <label class="control control--checkbox">
+                      Mujer
+                      <input type="checkbox" class="ml-2 check2" />
+                    </label>
+                  </li>
+                  <li>
+                    <label class="control control--checkbox">
+                      Hombre
+                      <input type="checkbox" class="ml-2 check2" />
+                    </label>
+                  <li>
+                    <label class="control control--checkbox">
+                      Niña
+                      <input type="checkbox" class="ml-2 check2" />
+                    </label>
+                  </li>
+                  <li>
+                    <label class="control control--checkbox">
+                      Niño
+                      <input type="checkbox" class="ml-2 check2" />
+                    </label>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Sub categoría
+                </a>
+                <ul class="collapse list-unstyled" id="filterSubCategory">
+                  <li *ngFor="let e of subcategorys">
+                    <label class="control control--checkbox">
+                      {{e.subCategoria}}
+                      <input type="checkbox" class="ml-2" /></label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterImageName" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Tipo de prenda
+                </a>
+                <ul class="collapse list-unstyled" id="filterImageName">
+                  <li *ngFor="let e of imagesnames">
+                    <label class="control control--checkbox">
+                      {{e.imageName}}
+                      <input type="checkbox" class="ml-2" /></label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Color
+                </a>
+                <ul class="collapse list-unstyled" id="filterColor">
+                  <li *ngFor="let e of colors">
+                    <label class="control control--checkbox">
+                      {{e.color}}
+                      <input type="checkbox" class="ml-2" /></label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Materiales
+                </a>
+                <ul class="collapse list-unstyled" id="filterMaterials">
+                  <li *ngFor="let e of materials">
+                    <label class="control control--checkbox">
+                      {{e.materiales}}
+                      <input type="checkbox" class="ml-2" /></label>
+                  </li>
+                </ul>
+              </li>
+
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cerrar</button>
+            <button type="button" class="btn btn-primary">Aplicar filtros</button>
+          </div>
+        </ng-template>
+      </div>
     </div>
     <div class="chart-line">
       <canvas id="myChart" width="200px" height="120px"></canvas> <!-- #mychart -->
@@ -14,7 +147,139 @@
   </div>
 
   <div class="table-container">
-    <h2>Categorías con mayor cambio - Precio promedio</h2>
+    <div class="filterTable">
+      <h2>Categorías con mayor cambio - Precio promedio</h2>
+      <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
+        xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+        viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+        aria-label="Illustration of a Funnel" class="filterSvgTable">
+        <g id="__id33_ssutzzo1g">
+          <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+            style="fill: inherit"></path>
+        </g>
+      </svg>
+      <br>
+      <ng-template #template>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Filtros</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <ul class="list-unstyled components">
+
+            <li class="active">
+              <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Marca
+              </a>
+              <ul class="collapse list-unstyled" id="filterMArk">
+                <li>
+                  <label class="control control--checkbox">
+                    Zara
+                    <input type="checkbox" class="ml-2 check" />
+                  </label>
+                </li>
+                <li>
+                  <label class="control control--checkbox">
+                    Mango
+                    <input type="checkbox" class="ml-2 check" />
+                  </label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Categoria
+              </a>
+              <ul class="collapse list-unstyled" id="filterCategory">
+                <li>
+                  <label class="control control--checkbox">
+                    Mujer
+                    <input type="checkbox" class="ml-2 check2" />
+                  </label>
+                </li>
+                <li>
+                  <label class="control control--checkbox">
+                    Hombre
+                    <input type="checkbox" class="ml-2 check2" />
+                  </label>
+                <li>
+                  <label class="control control--checkbox">
+                    Niña
+                    <input type="checkbox" class="ml-2 check2" />
+                  </label>
+                </li>
+                <li>
+                  <label class="control control--checkbox">
+                    Niño
+                    <input type="checkbox" class="ml-2 check2" />
+                  </label>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Sub categoría
+              </a>
+              <ul class="collapse list-unstyled" id="filterSubCategory">
+                <li *ngFor="let e of subcategorys">
+                  <label class="control control--checkbox">
+                    {{e.subCategoria}}
+                    <input type="checkbox" class="ml-2" /></label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterImageName" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Tipo de prenda
+              </a>
+              <ul class="collapse list-unstyled" id="filterImageName">
+                <li *ngFor="let e of imagesnames">
+                  <label class="control control--checkbox">
+                    {{e.imageName}}
+                    <input type="checkbox" class="ml-2" /></label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Color
+              </a>
+              <ul class="collapse list-unstyled" id="filterColor">
+                <li *ngFor="let e of colors">
+                  <label class="control control--checkbox">
+                    {{e.color}}
+                    <input type="checkbox" class="ml-2" /></label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Materiales
+              </a>
+              <ul class="collapse list-unstyled" id="filterMaterials">
+                <li *ngFor="let e of materials">
+                  <label class="control control--checkbox">
+                    {{e.materiales}}
+                    <input type="checkbox" class="ml-2" /></label>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cerrar</button>
+          <button type="button" class="btn btn-primary">Aplicar filtros</button>
+        </div>
+      </ng-template>
+    </div>
+
     <p>Comparación mes a mes</p>
 
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
