--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -46,6 +46,11 @@
   font-weight: bold;
 }
 
+.selectTop {
+  margin-top: -20px;
+  margin-right: 20px;
+}
+
 .material-icons{
   font-size: 30px;
 }
